--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+  <title>toddesgo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link ref="stylesheet" href="style.css" />
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <div id="moon">
+    <div class="moon-detail"></div>
+    <div class="moon-detail"></div>
+    <div class="moon-detail"></div>
+  </div>
 </body>
+
 </html>
